@@ -1,5 +1,10 @@
 2017-03-14  Sam Steingold  <sds@gnu.org>
 
+	* compiler.lisp (c-EVAL-WHEN): Remove the set-but-not-used
+	variable `eval-p'.
+
+2017-03-14  Sam Steingold  <sds@gnu.org>
+
 	Fix bug#687: executable images are broken when configured --with-debug.
 	* spvw_memfile.d (find_memdump): Reduce header_size: exclude
 	_subr_tab_addr and _symbol_tab_addr from header comparison.
